
	--------------------  HepMC-02-00-00  ---------------------------------

2006-08-22 Lynn Garren

	* src/IO_ExtendedAscii.cc: read and write generated mass as part of 
	  particle line.

2006-08-18 Lynn Garren

	* doc/HepMC2_user_manual.tex documentation for HepMC 2

2006-08-01 Lynn Garren

	* HepMC/is_arithmetic.h, HepMC/enable_if.h supplied by Walter Brown 
	  for a clean template constructor implementation.

2006-07-23 Lynn Garren

	* HepMC/SimpleVector.h: add a templated constructor for both FourVector
          and ThreeVector that will take any lorentz vector which has the 
          x(), y(), z(), and t() methods.  This should enable existing code 
          that uses CLHEP Vector classes to keep working.

2006-07-19 Lynn Garren

	* replace CLHEP/Vector/LorentzVector.h and CLHEP/Vector/ThreeVector.h  
	  with HepMC/SimpleVector.h
	  implement some of the basic vector properties so user code won't break


	--------------------  HepMC-01-28-00  ---------------------------------

2006-08-08 Lynn Garren

	* HepMC/IO_ExtendedAscii.h: Extended format writes PdfInfo and HeavyIon
	  if they are present in the event.  This is otherwise identical 
	  to IO_Ascii.h.

2006-07-30 Lynn Garren

	* HepMC/HEPEVT_Wrapper.h: fix for 64bit machines

2006-07-26 Lynn Garren
	
	* HepMC/PdfInfo.h implements information requested by CMS
	* GenEvent.h, GenEvent.cc make sure m_pdf_info is initialized to 0

	--------------------  HepMC-01-27-02  ---------------------------------

2006-06-19 Lynn Garren

	* fix test for Windows
	* add ReadMe.cygwin-VC71 and setup.cygwin-VC71


2006-06-14 Lynn Garren

	* GenEvent.cc, GenParticle.cc,  GenVertex.cc use standard C++ output
	* testPrintBug new test for output problems with gcc 4.x
	* HepMC/HepMC_CLHEP20.h defines several typedefs needed when compiling 
	   with CLHEP 2.0.x
	* HEPEVT_Wrapper.h, HerwigWrapper6_4.h, PythiaWrapper6_2.h
	   need extern "C" statements for gcc 4.x
	* HepMC_CLHEP20.h, Polarization.h, GenVertex.h, GenParticle.h